--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -199,6 +199,16 @@ config SENSORS_ADT7475
 	  This driver can also be build as a module.  If so, the module
 	  will be called adt7475.
 
+config SENSORS_ADT7476
+	tristate "Analog Devices ADT7476"
+	depends on I2C && EXPERIMENTAL
+	help
+	  If you say yes here you get support for the Analog Devices
+	  ADT7476 hardware monitoring chips.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called adt7476.
+
 config SENSORS_K8TEMP
 	tristate "AMD Athlon64/FX or Opteron temperature sensor"
 	depends on X86 && PCI && EXPERIMENTAL
